# job-hunter

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
findy_scraper/: cli.py
findy_scraper/application/: main_logic.py
findy_scraper/infrastructure/: cache_manager.py  llm_analyzer.py  playwright_handler.py
notion_updater/: cli.py
notion_updater/application/: main_logic.py
notion_updater/core/: models.py  notion_formatter.py
notion_updater/infrastructure/: file_handler.py  notion_api.py
